--- a/src/style.scss
+++ b/src/style.scss
@@ -24,13 +24,13 @@ $c-danger: $c-orange;
 $c-mask-white: transparentize($c-f5, 0.3);
 
 @mixin color-hover($name, $color) {
-    #{$name}: $color * 0.85 + $c-white * 0.15;
+    #{$name}: lighten($color, 10%);
 }
 @mixin color-active($name, $color) {
-    #{$name}: $color * 0.95 + $c-black * 0.05;
+    #{$name}: darken($color, 5%);
 }
 @mixin color-select($name, $color) {
-    #{$name}: $color * 0.8 + $c-white * 0.2;
+    #{$name}: lighten($color, 20%);
 }
 @mixin add-hover-active($name, $color) {
     &:hover {
